# valibuk

./: Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yaml
builder_validator_core/: Cargo.toml
builder_validator_core/src/: field.rs  lib.rs  root.rs
builder_validator_derive/: Cargo.toml
builder_validator_derive/src/: lib.rs
examples/: custom_error_type.rs  minimal.rs
src/: lib.rs
tests/: integration_test.rs
tests/ui/: wrong_validator_error_type.rs  wrong_validator_error_type.stderr  wrong_validator_type.rs  wrong_validator_type.stderr
valibuk_core/: Cargo.toml
valibuk_core/src/: field.rs  lib.rs  root.rs
valibuk_derive/: Cargo.toml
valibuk_derive/src/: lib.rs
