[package]
name = "valibuk"
version = "0.1.0"
edition = "2021"
authors = ["Miroslav Zoricak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["valibuk_derive", "valibuk_core"]

[dependencies]
valibuk_derive = {version = "0.1.0", path = "valibuk_derive"}

[dev-dependencies]
trybuild = "1.0"

