[package]
name = "valibuk_core"
version = "0.2.0"
edition = "2021"
description = "Internal library of Valibuk"
authors = ["Miroslav Zoricak <miroslav.zoricak@gmail.com>"]
categories = ["rust-patterns", "development-tools"]
keywords = ["validation", "builder", "derive", "macro"]
homepage = "https://github.com/mirosval/valibuk"
repository = "https://github.com/mirosval/valibuk"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["extra-traits", "full", "fold"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"

[dev-dependencies]
colored-diff = "0.2.3"
assert_tokens_eq = "0.1.0"
