[package]
name = "valibuk_derive"
version = "0.1.0"
edition = "2021"
description = "Macros for the Valibuk library"
authors = ["Miroslav Zoricak <miroslav.zoricak@gmail.com>"]
categories = ["rust-patterns", "development-tools"]
keywords = ["validation", "builder", "derive", "macro"]
homepage = "https://github.com/mirosval/valibuk"
repository = "https://github.com/mirosval/valibuk"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
valibuk_core = { version = "0.1.0", path = "../valibuk_core"}
syn = { version = "1", features = ["full", "extra-traits", "fold"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
static_assertions = "1.1.0"
